--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,5 +1,5 @@
 <h1>Choose Appointment Date</h1>
-<mat-form-field>
+<mat-form-field class="form">
 <mat-label>Choose a date</mat-label>
 <input matInput [matDatepicker]="picker" [formControl]="selectedDate">
 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -7,6 +7,5 @@
 
 </mat-form-field>
 
-section
 
-<p>You selected: {{ selectedDate.value | date }}</p>
+<p class="form">You selected: {{ selectedDate.value | date }}</p>
