--- a/src/date-picker/date-picker.component.css
+++ b/src/date-picker/date-picker.component.css
@@ -5,7 +5,7 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #fff;
   background-color: blueviolet;
-  text-shadow: 1px 1px 10px grey;
+  text-shadow: 1px 1px 10px #000;
   padding: .5em;
   font-size: medium;
 }
