--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,29 +1,32 @@
 <h1 class="center-elements">Choose Appointment Date</h1>
 <main class="center-elements">
-<form #f=ngForm action="" >
-<mat-form-field >
-  <mat-label>Choose a date</mat-label>
-  <input matInput [matDatepicker]="picker"[(ngModel)]="selectedDate" name="date" />
-  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
-<mat-form-field appearance="fill">
-  <mat-label>Select</mat-label>
-  <mat-select>
-    <mat-option name="service_type"value="one" ngModel>PonyTail</mat-option>
-    <mat-option value="two" ngModel>Curls</mat-option>
-  </mat-select>
-</mat-form-field>
-<mat-form-field name="special_request"appearance="fill"  ngModel>
-  <mat-label>Textarea</mat-label>
-  <textarea matInput></textarea>
-</mat-form-field>
-<button (click)="log(this.f.value)
-">submit</button>
-</form>
+  <form #f="ngForm" action="">
+    <mat-form-field>
+      <mat-label>Choose a date</mat-label>
+      <input
+        matInput
+        [matDatepicker]="picker"
+        [(ngModel)]="selectedDate"
+        name="date"
+      />
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Select</mat-label>
+      <mat-select>
+        <mat-option name="service_type" value="one" ngModel
+          >PonyTail</mat-option
+        >
+        <mat-option value="two" ngModel>Curls</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field name="special_request" appearance="fill" ngModel>
+      <mat-label>Textarea</mat-label>
+      <textarea matInput></textarea>
+    </mat-form-field>
+    <button mat-button (click)="log(this.f.value)">submit</button>
+  </form>
 
-<p class="form">You selected: {{ this.f.controls.date.value | date }}</p>
-
+  <p class="form">You selected: {{ this.f.controls.date.value | date }}</p>
 </main>
-
-
