--- a/src/date-picker/date-picker.component.css
+++ b/src/date-picker/date-picker.component.css
@@ -2,7 +2,7 @@ h1 {
   letter-spacing: 2px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #fff;
-  background-color: blueviolet;
+  background-color: #673ab7;
   text-shadow: 1px 1px 10px #000;
   padding: .5em;
   font-size: medium;
