--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,6 +1,13 @@
 <h1 class="center-elements">Choose Appointment Date</h1>
 <main class="center-elements">
-  <form #f="ngForm" action="">
+  <form *ngIf="!submitted"
+    #f="ngForm"
+    (ngSubmit)="
+      submitAppointment(
+    f.controls.date.value, 'fff', 'fff'
+      )
+    "
+  >
     <mat-form-field>
       <mat-label>Choose a date</mat-label>
       <input
@@ -14,17 +21,22 @@
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Select</mat-label>
-      <mat-select name="service_type" ngModel>
-        <mat-option name="service_type" value="PonyTail" ngModel
-          >PonyTail</mat-option
-        >
-        <mat-option value="Curls" ngModel>Curls</mat-option>
+      <mat-select [(ngModel)]="service_type" name="service_type">
+        <mat-option value="PonyTail"> PonyTail</mat-option>
+        <mat-option value="Curls">Curls</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Textarea</mat-label>
-      <textarea matInput name="special_request" ngModel></textarea>
+      <textarea
+        matInput
+        name="special_request"
+        [(ngModel)]="special_request"
+      ></textarea>
     </mat-form-field>
-    <button mat-button mat-raised-button color="primary">Submit</button>
+    <button type="submit" mat-button mat-raised-button color="primary">
+      Submit
+    </button>
   </form>
+ 
 </main>
