--- a/src/date-picker/date-picker.component.css
+++ b/src/date-picker/date-picker.component.css
@@ -4,8 +4,9 @@ h1 {
   color: #fff;
   background-color: #673ab7;
   text-shadow: 1px 1px 10px #000;
+  box-shadow: 1px 1px 5px #000;
   width: 100%;
-  padding: .5em;
+  padding: 0.5em;
   font-size: medium;
 }
 
@@ -15,15 +16,15 @@ p {
 }
 
 main {
-display: flex;
-justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 form {
   display: grid;
   justify-content: center;
   padding: 2em;
 }
-.center-elements{
+.center-elements {
   display: flex;
   justify-content: center;
 }
