--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -45,4 +45,5 @@
       Submit
     </button>
   </form>
+  <app-appointment *ngIf="submitted" [submittedDate]="this.date"></app-appointment>
 </main>
