3 files modified, 3 added

--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -45,5 +45,5 @@
       Submit
     </button>
   </form>
-  <app-appointment *ngIf="submitted" [submittedDate]="this.date"></app-appointment>
+  <app-confirmation [confirmed_date]="date"></app-confirmation>
 </main>
