--- a/src/confirmation/confirmation.component.html
+++ b/src/confirmation/confirmation.component.html
@@ -1,6 +1,6 @@
 <h1>Thank You!</h1>
 <p>
-  Your {{ confirmed_serviceType }} appointment for {{ confirmed_date }} has been
+  Your {{ confirmed_serviceType }} appointment for {{ confirmed_date | date }} has been
   confirmed
 </p>
 
