--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -45,5 +45,10 @@
       Submit
     </button>
   </form>
-  <app-confirmation *ngIf="submitted"[confirmed_date]="date" [confirmed_serviceType]="serviceType" [confirmed_specialRequest]="specialRequest"></app-confirmation>
+  <app-confirmation
+    *ngIf="submitted"
+    [confirmed_date]="date"
+    [confirmed_serviceType]="serviceType"
+    [confirmed_specialRequest="specialRequest"
+  ></app-confirmation>
 </main>
