--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -49,6 +49,6 @@
     *ngIf="submitted"
     [confirmed_date]="date"
     [confirmed_serviceType]="serviceType"
-    [confirmed_specialRequest="specialRequest"
+    [confirmed_specialRequest]="specialRequest"
   ></app-confirmation>
 </main>
