--- a/src/confirmation/confirmation.component.html
+++ b/src/confirmation/confirmation.component.html
@@ -1,4 +1,4 @@
-<h1>Thank You!</h1>
+<h1 class="center-elements">Thank You!</h1>
 <p>
   Your {{ confirmed_serviceType }} appointment for {{ confirmed_date | date }} has been
   confirmed
