--- a/src/confirmation/confirmation.component.css
+++ b/src/confirmation/confirmation.component.css
@@ -1,10 +1,19 @@
+.container {
+  display: grid;
+  justify-content: center;
+}
 h1 {
-  display: flex;
-  align-items: center;
   margin: .5em;
-  height: 100%
+
 }
 
 h3 {
   margin:1em;
 }
+
+.text-box {
+  background-color: #eee;
+  margin:1em;
+  padding: 2em;
+}
+
