--- a/src/confirmation/confirmation.component.html
+++ b/src/confirmation/confirmation.component.html
@@ -1,8 +1,9 @@
 <section class="container">
 <h1 class="center-elements">Thank You!</h1>
+<mat-icon class="icon">check</mat-icon>
 <p>
   Your {{ confirmed_serviceType }} appointment for {{ confirmed_date | date }} has been
-  confirmed
+  confirmed!
 </p>
 
 <h3>Special Request:</h3>
