--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -45,7 +45,7 @@
       Submit
     </button>
   </form>
-  
+  {{ this.submitted }}
   <app-confirmation
     *ngIf="submitted"
     [confirmed_date]="date"
