--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -3,9 +3,8 @@
   <h1 class="center-elements" *ngSwitchDefault>Choose Your Appointment Date</h1>
 </div>
 
-<main  class="center-elements">
+<main class="center-elements">
   <form
-   
     #f="ngForm"
     (ngSubmit)="
       submitAppointment(
@@ -14,7 +13,6 @@
         f.controls.special_request.value
       )
     "
-  
   >
     <mat-form-field>
       <mat-label>Choose a date</mat-label>
@@ -40,12 +38,12 @@
         matInput
         name="special_request"
         [(ngModel)]="special_request"
+        placeholder="Make It Pop"
       ></textarea>
     </mat-form-field>
     <button type="submit" mat-button mat-raised-button color="primary">
       Submit
     </button>
-
   </form>
 
   <app-confirmation
@@ -53,10 +51,8 @@
     [confirmed_date]="date"
     [confirmed_serviceType]="serviceType"
     [confirmed_specialRequest]="specialRequest"
-    [f]="this.f"
+    [form]="this.f"
     [resubmit]="submitted"
-
     (resubmitAppointment)="submitted = $event"
-
   ></app-confirmation>
 </main>
