--- a/src/confirmation/confirmation.component.css
+++ b/src/confirmation/confirmation.component.css
@@ -1,19 +1,29 @@
+
+h1 {
+  margin: 1em;
+}
+
+h3 {
+  margin-top: 1em;
+}
+.text {
+  margin: 10px;
+}
 .container {
   display: grid;
   justify-content: center;
 }
-h1 {
-  margin: .5em;
-
+.icon {
+  display: flex;
+  justify-content: center;
+  font-size: xx-large;
+  color: GREEN;
+  width: 100%;
+  height: 100%;
 }
-
-h3 {
-  margin:1em;
-}
-
 .text-box {
   background-color: #eee;
-  margin:1em;
+  color: green;
+  margin: 10px;
   padding: 2em;
 }
-
