--- a/src/confirmation/confirmation.component.css
+++ b/src/confirmation/confirmation.component.css
@@ -17,7 +17,7 @@ h3 {
   display: flex;
   justify-content: center;
   font-size: xx-large;
-  color: GREEN;
+  color: green;
   width: 100%;
   height: 100%;
 }
