--- a/src/confirmation/confirmation.component.html
+++ b/src/confirmation/confirmation.component.html
@@ -1,9 +1,8 @@
 <section class="container">
+  <h1 class="container">Thank You!</h1>
+  <mat-icon class="icon">check_circle</mat-icon>
 
-    <h1 class="container">Thank You!</h1>
-    <mat-icon class="icon">check_circle</mat-icon>
-
-  <p class="text">
+  <p class="container text">
     Your {{ confirmed_serviceType }} appointment for
     {{ confirmed_date | date }} has been confirmed!
   </p>
@@ -20,5 +19,4 @@
   >
     Make Another Appointment
   </button>
-
 </section>
