--- a/src/date-picker/date-picker.component.css
+++ b/src/date-picker/date-picker.component.css
@@ -1,5 +1,6 @@
 h1 {
   letter-spacing: 2px;
+  padding: 10px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #fff;
   background-color: #673ab7;
