--- a/src/date-picker/date-picker.component.html
+++ b/src/date-picker/date-picker.component.html
@@ -1,60 +1,28 @@
 <div [ngSwitch]="submitted">
-  <h1 class="center-elements" *ngSwitchCase="true">Your Appointment Date</h1>
-  <h1 class="center-elements" *ngSwitchDefault>Choose Your Appointment Date</h1>
+<h1 class="center-elements" *ngSwitchCase="true">Your Appointment Date</h1>
+<h1 class="center-elements" *ngSwitchDefault>Choose Your Appointment Date</h1>
 </div>
 
 <main class="center-elements">
-  <form
-    #f="ngForm"
-    (ngSubmit)="
-      submitAppointment(
-        f.controls.date.value,
-        f.controls.service_type.value,
-        f.controls.special_request.value
-      )
-    "
-  >
+<form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
     <mat-form-field>
-      <mat-label>Choose a date</mat-label>
-      <input
-        matInput
-        [matDatepicker]="picker"
-        [(ngModel)]="selectedDate"
-        name="date"
-      />
+      <input matInput [matDatepicker]="picker" placeholder="Choose a date" ngModel name="name" required>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Select</mat-label>
-      <mat-select [(ngModel)]="service_type" name="service_type">
-        <mat-option value="PonyTail"> PonyTail</mat-option>
-        <mat-option value="Curls">Curls</mat-option>
+  
+    <mat-form-field>
+      <mat-label>Hair Style</mat-label>
+      <mat-select ngModel name="hairstyle" required>
+        <mat-option value="ponytail">Ponytail</mat-option>
+        <mat-option value="curls">Curls</mat-option>
       </mat-select>
     </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Textarea</mat-label>
-      <textarea
-        matInput
-        name="special_request"
-        [(ngModel)]="special_request"
-        placeholder="Make It Pop"
-      ></textarea>
+  
+    <mat-form-field>
+      <textarea matInput placeholder="Special message" ngModel name="message"></textarea>
     </mat-form-field>
-    <button type="submit" mat-button mat-raised-button color="primary">
-      Submit
-    </button>
+    <button mat-raised-button color="primary">Set Appointment</button>
   </form>
-
- <!--
-    <app-confirmation
-    *ngIf="submitted"
-    [confirmed_date]="date"
-    [confirmed_serviceType]="serviceType"
-    [confirmed_specialRequest]="specialRequest"
-    [form]="this.f"
-    [resubmit]="submitted"
-    (resubmitAppointment)="submitted = $event"
-  ></app-confirmation>
- -->
+  
 </main>
